--- a/vok-web-client/src/app/app.component.html
+++ b/vok-web-client/src/app/app.component.html
@@ -1,7 +1,13 @@
 <h1>Vorkontierung</h1>
 
-<button type="button" (click)="loadLieferscheine()">Lieferscheine laden</button>
+<div class="container">
 
-<kendo-grid [data]="lieferscheine">
-  
-</kendo-grid>
+    <div class="lieferscheine">
+        <button type="button" (click)="loadLieferscheine()">Lieferscheine laden</button>
+        <kendo-grid id="lieferscheine-grid" [data]="lieferscheine" [scrollable]="'true'" [height]="200"></kendo-grid>
+    </div>
+    
+    <div class="rechnungen">
+
+    </div>
+</div>
