--- a/vok-web-client/src/styles.css
+++ b/vok-web-client/src/styles.css
@@ -1,3 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~@telerik/kendo-theme-default/dist/grid.css";
+
+html, body {
+  height: 100%;
+  margin: 0;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+
+.container {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+
+.lieferscheine, .rechnungen {
+  display: table-cell;
+  width: 50%;
+}
+
+.rechnungen {
+  background: grey;
+}
