--- a/vok-web-client/src/app/rechnungen/rechnungen.component.html
+++ b/vok-web-client/src/app/rechnungen/rechnungen.component.html
@@ -1,4 +1,4 @@
-<button type="button" (click)="loadRechnungen()">Aktualisieren</button>
+<!--<button type="button" (click)="loadRechnungen()">Aktualisieren</button>-->
 <!--<kendo-grid id="rechnungen-grid" [data]="rechnungen" [scrollable]="true" [height]="250"></kendo-grid>-->
 <table>
     <thead>
